--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ psycopg2==2.9.1
 pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.8.2
+PyJWT==1.7.1
+python-decouple==3.3
 python-dotenv==0.19.0
 python-multipart==0.0.5
 PyYAML==5.4.1
