--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ async-generator==1.10
 attrs==21.2.0
 autopep8==1.6.0
 base58==2.1.1
+bcrypt==3.2.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.8
@@ -27,6 +28,7 @@ multiaddr==0.0.9
 mysqlclient==2.1.0
 netaddr==0.8.0
 outcome==1.1.0
+passlib==1.7.4
 priority==2.0.0
 psycopg2==2.9.1
 pycodestyle==2.8.0
