--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ ipfshttpclient==0.4.13.2
 Mako==1.1.6
 MarkupSafe==2.0.1
 multiaddr==0.0.9
+mysql-connector==2.2.9
 mysqlclient==2.1.0
 netaddr==0.8.0
 outcome==1.1.0
@@ -35,6 +36,7 @@ pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.8.2
 PyJWT==1.7.1
+PyMySQL==1.0.2
 python-decouple==3.3
 python-dotenv==0.19.0
 python-multipart==0.0.5
